k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xxterm
  labels:
    app: xxterm-site
