k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxterm-site
  namespace: xxterm
  labels:
    app: xxterm-site
spec:
  type: NodePort
  selector:
    app: xxterm-site
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # 节点端口，范围 30000-32767
      protocol: TCP
