k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxterm-site
  namespace: xxterm
  labels:
    app: xxterm-site
spec:
  type: ClusterIP
  selector:
    app: xxterm-site
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
